<resources>
    <string name="app_name">Bottom_Sheets</string>
    <string name="order_details">Order Details</string>
    <string name="_435_00">₹435.00</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="address">Mithakhali Six Road, Ahmedabad</string>
    <string name="paneer_tikka_1x2">Paneer Tikka 1x2</string>
    <string name="proceed_payment">PROCEED PAYMENT</string>
</resources>
